# opndet

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  ROADMAP.md  pyproject.toml  roadmap-section-7-revision.md  temporal-prior-synthesis-spec.md  train.yaml
docs/: duckdb-metrics-plan.md  index.html
notebooks/: colab_quickstart.ipynb
scripts/: visualize_prior_synth.py
src/opndet/: __init__.py  augment.py  augment_temporal_prior.py  blocks.py  calibrate.py  cli.py  config.py  dashboard.py  dataset.py  decode.py  distill.py  encode.py  eval.py  export.py  loss.py  metrics.py  metrics_db.py  model.py  predict.py  presets.py  primitives.py  quantize.py  registry.py  stability.py  temporal.py  train.py  training_defaults.py  visualize.py  yaml_build.py
src/opndet/configs/: opndet-bbox-f-tp.yaml  opndet-bbox-f.yaml  opndet-bbox-g-dist.yaml  opndet-bbox-g.yaml  opndet-bbox-h-dist.yaml  opndet-bbox-h.yaml  opndet-bbox-l-dist.yaml  opndet-bbox-l.yaml  opndet-bbox-m-dist.yaml  opndet-bbox-m.yaml  opndet-bbox-n.yaml  opndet-bbox-p.yaml  opndet-bbox-s.yaml  opndet-bbox-t-dist.yaml  opndet-bbox-t.yaml  opndet-bbox-x-dist.yaml  opndet-bbox-x.yaml  train.yaml
tests/: test_temporal_prior.py
