[project]
name = "opndet"
version = "0.1.0"
description = "Tiny single-class object detector. OpenVINO 2022 opset compatible. No NMS."
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "onnx>=1.14",
    "onnxruntime>=1.16",
    "onnxscript>=0.1",
    "pillow>=10.0",
    "opencv-python-headless>=4.8",
    "pyyaml>=6.0",
    "tensorboard>=2.13",
    "tqdm>=4.65",
    "matplotlib>=3.6",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]
video = ["yt-dlp>=2024.1", "imageio[ffmpeg]>=2.30"]
dashboard = ["duckdb>=1.0", "fastapi>=0.110", "uvicorn[standard]>=0.27", "jinja2>=3.1"]

[project.scripts]
opndet = "opndet.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
opndet = ["configs/*.yaml"]

[tool.ruff]
line-length = 100
target-version = "py310"
